# control-panel

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Makefile  REFACTORING.md  ansible.cfg  dev_server.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: control-plane-ci.yml
admin/: README.md  xray_admin.py
app/: README.md  main.py
app/api/: deps.py  schemas.py  ui.py  xray_frontend.py
app/domain/: activity_log.py  client_status.py  transport_mode.py  vless_uri.py  xray_config.py  xray_frontend.py  xray_frontend_config.py
app/repos/: client_meta_repo.py  relay_node_repo.py  xray_frontend_repo.py
app/services/: client_service.py  config_service.py  topology_service.py  xray_frontend_service.py
app/templates/: activity_fragment.html  base.html  clients.html  config.html  dashboard.html
deploy/ansible/: README.md  inventory.ini.example  site.yml
deploy/bootstrap/: README.md  bootstrap-control-plane.sh  bootstrap-egress.sh  bootstrap-gateway.sh  bootstrap-standalone.sh  init-env.sh  lib.sh  restore_clients.py
deploy/env/: control-plane.env.example  egress.env.example  gateway.env.example  (+1 more)
docs/: container-run.md  deploy-session-summary-2026-03-21.md  ipsec-transport-v2-next-iteration.md  ipsec-transport-v2.md  portable-deployment-blueprint.md  test-baseline-direct.md
relay-agent/: main.py
scripts/: control-plane-down.sh  control-plane-logs.sh  control-plane-up.sh
tests/: conftest.py  test_ipsec_role.py  test_smoke.py  test_ui_feedback.py  test_ui_routes.py  test_ui_smoke.py
(+65 files in other folders)
