[project]
name = "control-panel"
version = "0.1.0"
description = "FastAPI control plane for Xray frontend/relay topology"
readme = "app/README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "jinja2==3.1.6",
  "python-multipart==0.0.20",
  "pydantic==2.11.7",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
  "ruff>=0.12.12,<0.13",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
